--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-jax
-flax
+jax~=0.4.6
+flax~=0.7.0
 optax
-fjutils
+fjutils~=0.0.5
+transformers~=4.30.2
+typing~=3.7.4.3
+numpy~=1.24.3
+einops~=0.6.1
